--- a/views/admin/voucherTrade.hbs
+++ b/views/admin/voucherTrade.hbs
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <link rel='stylesheet' href='/stylesheets/style.css' />
-  <title>Cerveza Patagonia</title>
+  <title>Cerveza Patagonia Paraguay</title>
 </head>
 <body>
  <div class="home-wrapper-info home-panel" style="text-align: center;">
