--- a/views/bases.hbs
+++ b/views/bases.hbs
@@ -35,7 +35,7 @@
   src="https://www.facebook.com/tr?id=421567758603715&ev=PageView&noscript=1"
 /></noscript>
 <!-- End Facebook Pixel Code -->
-    <title>Cerveza Patagonia</title>
+    <title>Cerveza Patagonia Paraguay</title>
 </head>
 
 <body>
@@ -106,7 +106,7 @@ b)	Comprando cualquiera de las variedades de la cerveza Patagonia en su versión
     <p class="bases-description">
      3.3	En cualquier momento durante el periodo de vigencia de la PROMOCION, los PARTICIPANTES podrán canjear sus kilómetros por los premios correspondientes, según la tabla de equivalencia kilómetros/premios que estará subida a la página web señalada anteriormente. Una vez canjeados kilómetros por premios determinados, estos kilómetros serán consumidos; es decir, se restarán los kilómetros utilizados por el PARTICIPANTE de los kilómetros que tenga acumulados. El proceso de canje de los PREMIOS será el siguiente, de acuerdo al tipo de PREMIO:
 
-<br>a)	Para canjear los PREMIOS del tipo Merchandising (inciso b, apartado 2.1.), los PARTICIPANTES deberán acercarse a los Centros de Canjes, los cuales estarán detallados en la página web y serán individualizados con material publicitario de la PROMOCION. En el Centro de Canje, el funcionario encargado tendrá acceso al sistema que informará la cantidad de Kilómetros acumulados por cada PARTICIPANTE. El PARTICIPANTE comunicará al funcionario cuales de los PREMIOS querrá canjear por sus kilómetros, siempre de acuerdo a la tabla de equivalencia Kilómetros/Premios, y en el lugar se le entregará el mismo, previa deducción de sus Kilómetros en su perfil de usuario en el sistema. Es requisito indispensable para el canje y retiro de estos PREMIOS que el PARTICIPANTE acuda personalmente al Centro de Canje, presente su cédula de identidad  y el código del voucher generado en la web, y firme los documentos que acrediten la recepción conforme del PREMIO canjeado y retirado. Sin esto, el encargado del Centro de Canje no podrá corroborar los Kilómetros acumulados ni realizar el canje correspondiente.
+<br>a)      Para canjear los PREMIOS del tipo Merchandising (inciso b, apartado 2.1.), los PARTICIPANTES deberán acercarse a los Centros de Canjes, los cuales estarán detallados en la página web y serán individualizados con material publicitario de la PROMOCION. En el Centro de Canje, el funcionario encargado tendrá acceso al sistema que informará la cantidad de Kilómetros acumulados por cada PARTICIPANTE. El PARTICIPANTE comunicará al funcionario cuales de los PREMIOS querrá canjear por sus kilómetros, siempre de acuerdo a la tabla de equivalencia Kilómetros/Premios, y en el lugar se le entregará el mismo, previa deducción de sus Kilómetros en su perfil de usuario en el sistema. Es requisito indispensable para el canje y retiro de estos PREMIOS que el PARTICIPANTE acuda personalmente al Centro de Canje, presente su cédula de identidad, el código del voucher generado en la web y una factura legal emitida a su nombre que acredite que el mismo sumó Kilómetros mediante alguna de las formas señaladas en el apartado 3.1. de estas BASES, sea comprando un pack de los productos Patagonia (inciso a) o consumiendo los Productos de la marca (inciso b) en alguno de los LOCALES ADHERIDOS a la PROMOCION. Sin esto, el encargado del Centro de Canje no podrá corroborar los Kilómetros acumulados ni realizar el canje correspondiente.
  
 <br>b)	Para canjear el PREMIO consistente en el Viaje a la Micro Cervecería (inciso a, apartado 2.1.), el PARTICIPANTE que tenga acumulados los Kilómetros necesarios para ser acreedor del mismo –conforme a la tabla de equivalencia Kilómetros/premios-, deberá comunicarse vía correo eléctronico a ymperalp@cervepar.com.py. En el correo, avisará que desea canjear dicho PREMIO, y el ORGANIZADOR se pondrá en contacto para solicitar la siguiente documentación: una copia de su documento de identidad, copia de al menos una factura legal emitida a su nombre que acredite que el mismo sumó Kilómetros mediante alguna de las formas señaladas en el apartado 3.1. de estas BASES, sea comprando un pack de los productos Patagonia (inciso a) o consumiendo los Productos de la marca (inciso b) en alguno de los LOCALES ADHERIDOS a la PROMOCION y Certificado de Trabajo o documento equivalente. El ORGANIZADOR verificará que el PARTICIPANTE tenga los Kilómetros necesarios para canjearlos por el PREMIO, así como también si el PARTICIPANTE cumple con los demás requisitos y condiciones señaladas en estas BASES y si no se encuentra impedido por alguna de las causales establecidas en el punto 8, y responderá al PARTICIPANTE dentro de las 48 horas siguientes a su solicitud de canje, confirmando o no si el mismo es oficialmente GANADOR del PREMIO consistente en el Viaje a la Micro Cervecería. La entrega de todos los documentos necesarios para viajar así como la coordinación de todos los demás detalles, será realizada posteriormente entre el ORGANIZADOR, el PARTICIPANTE GANADOR y la Agencia de Viajes pertinente.
 
@@ -129,18 +129,19 @@ b)	Comprando cualquiera de las variedades de la cerveza Patagonia en su versión
 
 </p>
     <p class="bases-description">
-      5.1 No podrán participar de la PROMOCION:
-<br><br> a) Personas menores de veinte (20) años de edad;
-<br>b) Directivos y empleados del ORGANIZADOR y de cualquier otra sociedad o empresa del grupo ABINBEV;
-<br>c) Personas que presten servicios profesionales tercerizados al ORGANIZADOR;
-<br>d) Directivos y empleados de empresas o particulares que el ORGANIZADOR contrate para proveer cualquier servicio relacionado a la PROMOCION, y de las empresas o particulares que sean subcontratadas para ello;
-<br>e) Directivos y empleados de los LOCALES ADHERIDOS a la PROMOCION o de clientes del ORGANIZADOR;
-<br>f) Personas que al momento de la adjudicación o canje de los PREMIOS se vea afectada por una condena penal firme dictada en cualquier Jurisdicción, Nacional o Extranjera, o sobre quien pese una medida alternativa u orden judicial de arresto domiciliario o prohibición de salir del país; y,
-<br> g) Quienes tengan relación de parentesco con alguna de las personas referidas en los incisos b), c), d), e) y f) del presente apartado, hasta el tercer grado de consanguinidad o segundo de afinidad.-
+5.1      No podrán participar de la PROMOCION:
 
+<br><br>a)    Personas menores de veinte (20) años de edad;
+<br>b)   Directivos y empleados del ORGANIZADOR y de cualquier otra sociedad o empresa del grupo ABINBEV;
+<br>c)    Personas que presten servicios profesionales tercerizados al ORGANIZADOR;
+<br>d)   Directivos y empleados de empresas o particulares que el ORGANIZADOR contrate para proveer cualquier servicio relacionado a la PROMOCION, y de las empresas o particulares que sean subcontratadas para ello;
+<br>e)   Directivos y empleados de los LOCALES ADHERIDOS a la PROMOCION o de clientes del ORGANIZADOR;
+<br>f)     Personas que al momento de la adjudicación o canje de los PREMIOS se vea afectada por una condena penal firme dictada en cualquier Jurisdicción, Nacional o Extranjera, o sobre quien pese una medida alternativa u orden judicial de arresto domiciliario o prohibición de salir del país; y,
+<br>g)    Quienes tengan relación de parentesco con alguna de las personas referidas en los incisos b), c), d), e) y f) del presente apartado, hasta el tercer grado de consanguinidad o segundo de afinidad.-
     </p>
-
-
+    <p class="bases-description">
+5.2    La única excepción a lo establecido en el apartado 5.1 que antecede es para aquellas personas PARTICIPANTES comprendidas en el inciso b), quienes podrán participar de la PROMOCION y podrán ganar los PREMIOS consistentes en “Merchandising de la marca”. Se aclara expresamente que estos no podrán ganar el premio consistente en el Viaje a la Microcervecería, ni aunque tengan los Kilómetros requeridos para el canje correspondiente.
+</p>
 <p class="bases-title">
   6.	EXENCION DE RESPONSABILIDAD 
 
