--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -3,13 +3,13 @@
   <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-     <meta name="description" itemprop="description" content="Viajá con Patagonia. Cada cerveza te lleva a Bariloche. Empezá a acumular kilómetros para viajar a conocer nuestra Microcerveria o canjearlos por premios exclusivos." />
-    <meta name="keywords" itemprop="keywords" content="Patagonia, Paraguay, Patagonia Paraguay, Concurso, Promoción, Promoción Patagonia, Viaja con Patagonia, Pasaporte Patagonia, Concurso Patagonia, Kilómetros Patagonia" />
+    <meta name="description" itemprop="description" content="Viajá con Patagonia. Cada cerveza te lleva a Bariloche. Empezá a acumular kilómetros para viajar a conocer nuestra Microcerveria o canjearlos por premios exclusivos." />
+    <meta name="keywords" itemprop="keywords" content="Patagonia, Paraguay, Patagonia Paraguay, Concurso, Promoción, Promoción Patagonia, Viaja con Patagonia, Pasaporte Patagonia, Concurso Patagonia, Kilómetros Patagonia, Cerveza Patagonia, Paraguay, Cerveza Paraguay" />
     <meta name="robots" content="index, follow" />
     <script src="/static/progressbar.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel='stylesheet' href='/stylesheets/style.css' />
-    <title>Cerveza Patagonia</title>
+    <title>Cerveza Patagonia Paraguay</title>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-135431410-1"></script>
