--- a/views/registro/index.hbs
+++ b/views/registro/index.hbs
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel='stylesheet' href='/stylesheets/style.css' />
   <meta name="description" itemprop="description" content="Viajá con Patagonia. Cada cerveza te lleva a Bariloche. Empezá a acumular kilómetros para viajar a conocer nuestra Microcerveria o canjearlos por premios exclusivos." />
-  <meta name="keywords" itemprop="keywords" content="Patagonia, Paraguay, Patagonia Paraguay, Concurso, Promoción, Promoción Patagonia, Viaja con Patagonia, Pasaporte Patagonia, Concurso Patagonia, Kilómetros Patagonia" />
-  <meta name="robots" content="index, follow" />
+    <meta name="keywords" itemprop="keywords" content="Patagonia, Paraguay, Patagonia Paraguay, Concurso, Promoción, Promoción Patagonia, Viaja con Patagonia, Pasaporte Patagonia, Concurso Patagonia, Kilómetros Patagonia, Cerveza Patagonia, Paraguay, Cerveza Paraguay" />
+    <meta name="robots" content="index, follow" />
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-135431410-1"></script>
 <script>
@@ -34,7 +34,7 @@
   src="https://www.facebook.com/tr?id=421567758603715&ev=PageView&noscript=1"
 /></noscript>
 <!-- End Facebook Pixel Code -->
-  <title>Cerveza Patagonia</title>
+  <title>Cerveza Patagonia Paraguay</title>
 </head>
 <body>
   <div id="tutorial-wrapper">
