--- a/views/registro/registroCuatro.hbs
+++ b/views/registro/registroCuatro.hbs
@@ -31,7 +31,7 @@
   src="https://www.facebook.com/tr?id=421567758603715&ev=PageView&noscript=1"
 /></noscript>
 <!-- End Facebook Pixel Code -->
-  <title>Cerveza Patagonia</title>
+  <title>Cerveza Patagonia Paraguay</title>
 </head>
 <body>
   <div class="home-wrapper-steps">
