--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1721,6 +1721,7 @@ header #menu-mobile-wrapper {
   display: flex;
   justify-content: center;
   padding: 30px 0;
+  align-items: center;
 }
 
 .vouchers-canjeados span {
@@ -1783,6 +1784,19 @@ table.vouchers-table td {
   font-weight: bold;
   font-family: "AmsiPro-Bold", sans-serif;
   font-size: 10px;
+}
+
+#export-excel {
+  color: #fff;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.export-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
 }
 
 
